--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(star-table LANGUAGES CXX)
 find_package(ROOT REQUIRED)
 
 set(CMAKE_INSTALL_INCLUDEDIR include)
+set(CMAKE_INSTALL_LIBDIR lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 set_directory_properties(PROPERTIES INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/inc)
 
 ROOT_STANDARD_LIBRARY_PACKAGE(Table DEPENDENCIES ROOT::Core ROOT::Tree ROOT::Gpad ROOT::Graf3d ROOT::Graf ROOT::Hist ROOT::RIO ROOT::MathCore)
